# chatsong

./: Cargo.toml  README.md  README_zh.md  config_template.txt
assets/css/: Prism_min.css  katex.min.css  style.css  style_for_download.css
assets/image/: attachment-2-svgrepo-com.txt  brain-svgrepo-com.txt  delete.txt  download-square-svgrepo-com.txt  format-space-less-svgrepo-com.txt  help-svgrepo-com.txt  icon_download.txt  icon_help.txt  icon_send.txt  icon_upload.txt  incognito-svgrepo-com-1.txt  incognito-svgrepo-com-2.txt  message-plus-circle-svgrepo-com.txt  microphone-svgrepo-com-8-0.txt  microphone-svgrepo-com-8-1.txt  robot-1.txt  robot-7.txt  setting.txt  stop-circle-svgrepo-com-3.txt  target-svgrepo-com-1-0.txt  target-svgrepo-com-1-1.txt  user-icon-1.txt  voice-one-svgrepo-com.txt
assets/js/: Prism_min.js  katex.min.js  marked-katex-extension.js  marked.min.js
doc/: add_two_value.py  manual_en.md  manual_zh.md
src/: main.rs
src/api/: ctrlc.rs  error.rs  graph.rs  html_page.rs  info.rs  mod.rs  parse_paras.rs  pdf.rs  prompt.rs  token.rs  v1.rs  v2.rs
src/api/asr/: microphone.rs  mod.rs  utils.rs
src/api/channel/: mod.rs
src/api/code/: mod.rs  project.rs  traverse.rs
src/api/code_completion/: mod.rs
src/api/handlers/: approval.rs  chat.rs  delete_message.rs  demo_csv.rs  demo_json.rs  demo_status.rs  demo_uri.rs  fallback.rs  get_items.rs  get_items_id.rs  goal.rs  hello.rs  hello_html.rs  incognito.rs  index.rs  memory.rs  microphone.rs  mod.rs  multi_foo.rs  new_instruction.rs  save.rs  upload.rs  usage.rs  user.rs
src/api/mcp/: mod.rs  protocol_version_2025_06_18.rs  stdio.rs  (+1 more)
(+96 files in other folders)
